// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::DataExport initial state hides the dataset radio buttons when there is no filter 1`] = `
<section
  className="export-modal"
>
  <div
    className="header layout-row"
  >
    <h3
      className="flex-all"
    >
      Export complaints
    </h3>
    <button
      className="a-btn a-btn__link"
      data-gtm_ignore="true"
    >
      Close
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm261.8 692.2c19.4 19.6 19.3 51.3-.3 70.7-19.5 19.3-50.9 19.3-70.4 0L499.6 676.6 308 868.1c-19.6 19.4-51.3 19.3-70.7-.3-19.3-19.5-19.3-50.9 0-70.4l191.6-191.5-191.6-191.6c-19.3-19.8-18.9-51.4.9-70.7 19.4-18.9 50.4-18.9 69.8 0l191.6 191.5 191.5-191.5c19.6-19.4 51.3-19.3 70.7.3 19.3 19.5 19.3 50.9 0 70.4L570.3 605.9l191.5 191.5z"
        />
      </svg>
    </button>
  </div>
  <div
    className="body"
  >
    <div
      className="body-copy instructions"
    >
      To download a copy of this dataset, choose the file format and which complaints you want to export below.
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select a format for the exported file
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_csv"
            onChange={[Function]}
            type="radio"
            value="csv"
          />
          <label
            className="a-label"
            htmlFor="format_csv"
          >
            CSV
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_json"
            onChange={[Function]}
            type="radio"
            value="json"
          />
          <label
            className="a-label"
            htmlFor="format_json"
          >
            JSON
          </label>
        </div>
      </div>
    </div>
    <div
      className="heres-the-url"
    >
      <h4>
        Link to your complaint search results for future reference
      </h4>
      <div
        className="layout-row"
      >
        <input
          className="flex-all a-text-input"
          id="exportUri"
          readOnly={true}
          type="text"
        />
        <button
          className="a-btn a-btn__secondary"
          disabled={true}
          onClick={[Function]}
        >
          <div>
            <span
              className="a-btn_icon"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 686.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M526.4 162.5H144.7c-16.3 0-29.7 13.4-29.7 29.7v77.9H29.7C13.4 270.1 0 283.5 0 299.8v719.4c0 16.3 13.4 29.7 29.7 29.7h512.2c16.3 0 29.7-13.4 29.7-29.7v-77.9h85.3c16.3 0 29.7-13.4 29.7-29.7V322.7L526.4 162.5zm-351.4 60h308v110.8c0 3.6.6 7 1.7 10.2l-73.4-73.4H175v-47.6zm336.6 766.3H60V330.1h308v110.8c0 17.5 14.3 31.8 31.8 31.8h111.8v516.1zm115-107.6h-55V430.3l-66.9-66.9c3.2 1.1 6.6 1.7 10.2 1.7h111.7v516.1z"
                />
              </svg>
            </span>
            Copy
          </div>
        </button>
      </div>
    </div>
    <div
      className="timeliness-warning"
    >
      The export process could take several minutes if you're downloading many complaints
    </div>
  </div>
  <div
    className="footer layout-row"
  >
    <button
      className="a-btn"
      data-gtm_ignore="true"
      disabled={true}
      onClick={[Function]}
    >
      Start export
    </button>
    <button
      className="a-btn a-btn__link a-btn__warning"
      data-gtm_ignore="true"
    >
      Cancel
    </button>
  </div>
</section>
`;

exports[`component::DataExport initial state renders without crashing 1`] = `
<section
  className="export-modal"
>
  <div
    className="header layout-row"
  >
    <h3
      className="flex-all"
    >
      Export complaints
    </h3>
    <button
      className="a-btn a-btn__link"
      data-gtm_ignore="true"
    >
      Close
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm261.8 692.2c19.4 19.6 19.3 51.3-.3 70.7-19.5 19.3-50.9 19.3-70.4 0L499.6 676.6 308 868.1c-19.6 19.4-51.3 19.3-70.7-.3-19.3-19.5-19.3-50.9 0-70.4l191.6-191.5-191.6-191.6c-19.3-19.8-18.9-51.4.9-70.7 19.4-18.9 50.4-18.9 69.8 0l191.6 191.5 191.5-191.5c19.6-19.4 51.3-19.3 70.7.3 19.3 19.5 19.3 50.9 0 70.4L570.3 605.9l191.5 191.5z"
        />
      </svg>
    </button>
  </div>
  <div
    className="body"
  >
    <div
      className="body-copy instructions"
    >
      To download a copy of this dataset, choose the file format and which complaints you want to export below.
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select a format for the exported file
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_csv"
            onChange={[Function]}
            type="radio"
            value="csv"
          />
          <label
            className="a-label"
            htmlFor="format_csv"
          >
            CSV
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_json"
            onChange={[Function]}
            type="radio"
            value="json"
          />
          <label
            className="a-label"
            htmlFor="format_json"
          >
            JSON
          </label>
        </div>
      </div>
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select which complaints you'd like to export
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="dataset_filtered"
            onChange={[Function]}
            type="radio"
            value="filtered"
          />
          <label
            className="a-label"
            htmlFor="dataset_filtered"
          >
            <div
              className="multiline-label"
            >
              <div>
                Filtered dataset (
                1,001
                 complaints)
              </div>
              <div
                className="body-copy"
              >
                (only the results of the last search and/or filter)
              </div>
            </div>
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="dataset_full"
            onChange={[Function]}
            type="radio"
            value="full"
          />
          <label
            className="a-label"
            htmlFor="dataset_full"
          >
            <div
              className="multiline-label"
            >
              <div>
                Full dataset (
                9,999
                 complaints)
              </div>
              <div
                className="body-copy"
              >
                (not recommended due to very large file size)
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      className="heres-the-url"
    >
      <h4>
        Link to your complaint search results for future reference
      </h4>
      <div
        className="layout-row"
      >
        <input
          className="flex-all a-text-input"
          id="exportUri"
          readOnly={true}
          type="text"
        />
        <button
          className="a-btn a-btn__secondary"
          disabled={true}
          onClick={[Function]}
        >
          <div>
            <span
              className="a-btn_icon"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 686.6 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M526.4 162.5H144.7c-16.3 0-29.7 13.4-29.7 29.7v77.9H29.7C13.4 270.1 0 283.5 0 299.8v719.4c0 16.3 13.4 29.7 29.7 29.7h512.2c16.3 0 29.7-13.4 29.7-29.7v-77.9h85.3c16.3 0 29.7-13.4 29.7-29.7V322.7L526.4 162.5zm-351.4 60h308v110.8c0 3.6.6 7 1.7 10.2l-73.4-73.4H175v-47.6zm336.6 766.3H60V330.1h308v110.8c0 17.5 14.3 31.8 31.8 31.8h111.8v516.1zm115-107.6h-55V430.3l-66.9-66.9c3.2 1.1 6.6 1.7 10.2 1.7h111.7v516.1z"
                />
              </svg>
            </span>
            Copy
          </div>
        </button>
      </div>
    </div>
    <div
      className="timeliness-warning"
    >
      The export process could take several minutes if you're downloading many complaints
    </div>
  </div>
  <div
    className="footer layout-row"
  >
    <button
      className="a-btn"
      data-gtm_ignore="true"
      disabled={true}
      onClick={[Function]}
    >
      Start export
    </button>
    <button
      className="a-btn a-btn__link a-btn__warning"
      data-gtm_ignore="true"
    >
      Cancel
    </button>
  </div>
</section>
`;

exports[`component::DataExport visual changes switches the button after a copy 1`] = `
<section
  className="export-modal"
>
  <div
    className="header layout-row"
  >
    <h3
      className="flex-all"
    >
      Export complaints
    </h3>
    <button
      className="a-btn a-btn__link"
      data-gtm_ignore="true"
    >
      Close
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm261.8 692.2c19.4 19.6 19.3 51.3-.3 70.7-19.5 19.3-50.9 19.3-70.4 0L499.6 676.6 308 868.1c-19.6 19.4-51.3 19.3-70.7-.3-19.3-19.5-19.3-50.9 0-70.4l191.6-191.5-191.6-191.6c-19.3-19.8-18.9-51.4.9-70.7 19.4-18.9 50.4-18.9 69.8 0l191.6 191.5 191.5-191.5c19.6-19.4 51.3-19.3 70.7.3 19.3 19.5 19.3 50.9 0 70.4L570.3 605.9l191.5 191.5z"
        />
      </svg>
    </button>
  </div>
  <div
    className="body"
  >
    <div
      className="body-copy instructions"
    >
      To download a copy of this dataset, choose the file format and which complaints you want to export below.
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select a format for the exported file
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={true}
            className="a-radio"
            id="format_csv"
            onChange={[Function]}
            type="radio"
            value="csv"
          />
          <label
            className="a-label"
            htmlFor="format_csv"
          >
            CSV
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_json"
            onChange={[Function]}
            type="radio"
            value="json"
          />
          <label
            className="a-label"
            htmlFor="format_json"
          >
            JSON
          </label>
        </div>
      </div>
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select which complaints you'd like to export
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="dataset_filtered"
            onChange={[Function]}
            type="radio"
            value="filtered"
          />
          <label
            className="a-label"
            htmlFor="dataset_filtered"
          >
            <div
              className="multiline-label"
            >
              <div>
                Filtered dataset (
                1,001
                 complaints)
              </div>
              <div
                className="body-copy"
              >
                (only the results of the last search and/or filter)
              </div>
            </div>
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={true}
            className="a-radio"
            id="dataset_full"
            onChange={[Function]}
            type="radio"
            value="full"
          />
          <label
            className="a-label"
            htmlFor="dataset_full"
          >
            <div
              className="multiline-label"
            >
              <div>
                Full dataset (
                9,999
                 complaints)
              </div>
              <div
                className="body-copy"
              >
                (not recommended due to very large file size)
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      className="heres-the-url"
    >
      <h4>
        Link to your complaint search results for future reference
      </h4>
      <div
        className="layout-row"
      >
        <input
          className="flex-all a-text-input"
          id="exportUri"
          readOnly={true}
          type="text"
        />
        <button
          className="a-btn export-url-copied"
          disabled={true}
          onClick={[Function]}
        >
          <div>
            <span
              className="a-btn_icon"
            >
              <svg
                className="cf-icon-svg"
                viewBox="0 0 1000 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm259 284.2L481.4 870.3c-8.2 14.1-22.7 23.4-39 24.8-1.4.1-2.9.2-4.3.2-14.8 0-28.9-6.6-38.4-18L244.4 690.9c-17.9-21-15.4-52.6 5.7-70.5 21-17.9 52.6-15.4 70.5 5.7.2.3.5.5.7.8l109.4 131.4 241.8-418.8c13.6-24 44.2-32.4 68.2-18.8 24 13.6 32.4 44.2 18.8 68.2l-.5.5z"
                />
              </svg>
            </span>
            Copied
          </div>
        </button>
      </div>
    </div>
    <div
      className="timeliness-warning"
    >
      The export process could take several minutes if you're downloading many complaints
    </div>
  </div>
  <div
    className="footer layout-row"
  >
    <button
      className="a-btn"
      data-gtm_ignore="true"
      disabled={true}
      onClick={[Function]}
    >
      Start export
    </button>
    <button
      className="a-btn a-btn__link a-btn__warning"
      data-gtm_ignore="true"
    >
      Cancel
    </button>
  </div>
</section>
`;
